--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module"  src="script.js"></script>
+    <script type="module"  src="./src/App.js"></script>
 </body>
 </html>
